2008-08-28 Fix step plots with log scale - MGD

2008-08-28 Fix masked arrays with markers in non-Agg backends - MGD

2008-08-28 Fix clip_on kwarg so it actually works correctly - MGD

2008-08-25 Fix locale problems in SVG backend - MGD

2008-08-22 fix quiver so masked values are not plotted - JSW

2008-08-18 improve interactive pan/zoom in qt4 backend on windows - DSD

2008-08-11 Fix more bugs in NaN/inf handling.  In particular, path simplification
           (which does not handle NaNs or infs) will be turned off automatically
           when infs or NaNs are present.  Also masked arrays are now converted
           to arrays with NaNs for consistent handling of masks and NaNs
            - MGD and EF

=================================================================
2008-08-03 Released 0.98.3 at svn r5947

2008-08-01 Backported memory leak fixes in _ttconv.cpp - MGD

2008-07-31 Added masked array support to griddata. - JSW

2008-07-26 Added optional C and reduce_C_function arguments to
	   axes.hexbin().  This allows hexbin to accumulate the values
	   of C based on the x,y coordinates and display in hexagonal
	   bins. - ADS

2008-07-24 Deprecated (raise NotImplementedError) all the mlab2
           functions from matplotlib.mlab out of concern that some of
           them were not clean room implementations. JDH

2008-07-24 Rewrite of a significant portion of the clabel code (class
	   ContourLabeler) to improve inlining. - DMK

2008-07-22 Added Barbs polygon collection (similar to Quiver) for plotting
           wind barbs.  Added corresponding helpers to Axes and pyplot as
           well. (examples/pylab_examples/barb_demo.py shows it off.) - RMM

2008-07-21 Added scikits.delaunay as matplotlib.delaunay.  Added griddata
           function in matplotlib.mlab, with example (griddata_demo.py) in
           pylab_examples. griddata function will use mpl_toolkits._natgrid
           if installed.  - JSW
