@@ -1,3 +1,6 @@
+2008-08-28 Added support for multiple histograms with data of
+           different length - MM
+
 2008-08-28 Fix step plots with log scale - MGD
 
 2008-08-28 Fix masked arrays with markers in non-Agg backends - MGD
